Enhance index.html with forum details and events
Added detailed information about the Science Forum Nashik, including its objectives, members, important decisions, upcoming and past events, and copyright notice.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
+<img src="Logo.jpg" alt="Science Forum Nashik Logo" width="150">
 
+<h2>Science Forum Nashik</h2>
+An informal body in the name of “Science Forum Nashik” has been acting since 1978 and conducting various programs, (like lectures by scientists, Hobby Classes during vacation of school children, workshops for teachers and competitions making video clips showing activity-based learning activities for school children) for advancement of the cause of developing scientific temper, creating awareness and developing interest in the young minds and in the public in general, a need for registering the body under Association of Persons was realised by the members of the above-mentioned informal body to address to the various legal, financial and administrative issues. Therefore, an Association of Persons (hereinafter called “the AOP”) in the name “Science Forum Nashik”  was formed comprising of eleven of the members of the above-mentioned informal with a view of adding more persons interested in the causes being espoused by the body and with provision that the members not interested due to any reasons may opt out of the body. 
+<p> <p>
+   You may find the YouTube channel for the Science Forum Nashik <a href="https://www.youtube.com/@scienceforumnashik3344/featured" target="_blank"> here. </a>
+<p>
+
+
+<!-- ===== LOGO ===== -->
+
+
+<!-- ===== DEED PDF ===== -->
+You may see the full text of the AOP Deed (25 Sep 2025)   <a href="https://github.com/rajendravadnere-web/Scienceforum/blob/main/AOP_deed_24SEPT2025.pdf" target="_blank"> here. </a>
+
+<!-- ===== OBJECTIVES (Section 2) ===== -->
+<h2>Our Objectives</h2>
+As mentioned in the Section 2 of the AOP Deed:
+<p>
+
+The AOP shall strive to realize the following:
+<p>
+(2.1) to assist in inculcation of the spirit of scientific temper in the minds of general population, particularly the young persons, by asking relevant questions and seeking answer to these questions through methods of science including experiments, building theories which explain these experiments in qualitative and quantitative manners and make such predictions which are falsifiable and not to subscribe to dogmatic, superstitious explanations;
+
+(2.2) to develop interests in science content;
+
+(2.3) to facilitate discussions on the current developments in the field of science, technology and their impacts on the lives of general population;
+
+(2.4) to facilitate development of curiosity in the minds of populations so that they question the phenomena and seek to find answer through study of science content in an enjoyable manner and thereby propagate spirit of joyful learning to others;
+
+(2.5) to assist the general population including the young minds to develop methods which will enable them to solve the problems (falling under the domain of science and technology) including those involving their daily life issues in a systematic, creative (including out-of-the-box thinking) and ecologically self-sustaining manner;
+
+(2.6) to make use of the technology including information and communication technology (ICT) to achieve its objectives in cost-effective, efficient and effective manners.
+    
+</u>
+<h2>List of Members </h2>
+The list of all the members as of 01 Nov 2025 are mentioned in Deed Document.
+<!-- Example: --><p>
+<a href="https://github.com/rajendravadnere-web/Scienceforum/blob/main/AOP_deed_24SEPT2025.pdf" target="_blank">You may see the full text of the AOP Deed (25 Sep 2025) here. </a>
+>
+<!-- ===== IMPORTANT DECISIONS ===== -->
+<h2>Important Decisions</h2>
+All the decisions taken by the AOP as discussed and finalised in the various meetings and interactions are as follows:
+<!-- Example: --><p>
+<a href="decisions/october-28-2025.pdf" target="https://drive.google.com/file/d/1ZK5zA2C1DYTtx6EJECP_LD-GsDQdhCgZ/view?usp=sharing">
+   October 28, 2025 Meeting.</p>
+</a>
+
+<!-- ===== FUTURE EVENTS ===== -->
+<h2>Upcoming Events</h2>
+<ul>
+  Video Clip Competitions based on Activity-based Learning on Science and Maths subjects for Students 2026
+   <p>
+      Under Development
+   </p>
+  <!-- Example: <li>15 Dec 2025: Hands-on Science Teacher Workshop</li> -->
+</ul>
+
+<!-- ===== PAST EVENTS ===== -->
+<h2>Past Events</h2>
+<ul>
+  <a href="decisions/october-28-2025.pdf" target="[s:/http/drive.google.com/file/d/1ZK5zA2C1DYTtx6EJECP_LD-GsDQdhCgZ/view?usp=sharing](https://www.youtube.com/playlist?list=PLP7UR0ZnLgb6VAlMbeMMR2cTvFTpTNeAz)">
+   Teachers Worskshop on Activity Based Learning, July,4 and 5, 2025.</p>
+</a>
+  <!-- Example: <li>28 Oct 2025: Approved Forms 9.1.A–C</li> -->
+</ul>
+
+<!-- ===== CAVEAT ===== -->
+<div style="background:#fff3cd; padding:15px; border-left:5px solid #ffc107; margin:20px 0;">
+  <strong>Caveat:</strong> 
+   Users are advised to read the conditions for participating in the activities of the AOP. 
+  <!-- Example: All members are jointly and severally liable for AOP liabilities as per Section 1 of the Deed. -->
+</div>
+
+<!-- ===== COPYRIGHT ===== -->
+<footer style="text-align:center; margin-top:50px; color:#666;">
+  Copy right: All rights reserved. No part of any content on this website be reproduced or used for commercial or other purposes without express permission of Science Forum, Nashik (AOP).
+  <!-- Example: © 2025 Science Forum Nashik AOP. All rights reserved. -->
+ 
+</footer>
